# pobax_playground

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
action/: Record.action
config/: bounds.json  general.json  human_sounds.pickle  learning.json  torso.json  torso_params.json  voice.json
launch/: start.launch
msg/: Demonstration.msg  SensorialState.msg  SensorialTrajectory.msg
nodes/: baxter_node.py  controller.py  learning_node.py  perception_node.py  torso_node.py  torso_node.py~  voice_node.py
notebooks/: data_visualization.ipynb  human_sounds.json  human_sounds_generation.ipynb
src/nodes/: controller.py
src/pobax_playground/learning/: __init__.py  learning.py  translator.py  translator_arm.py  translator_diva.py
src/pobax_playground/learning/core/: learning_module.py  sensorimotor_model.py  supervisor.py
src/pobax_playground/perception/: __init__.py  aggregator.py  perception.py
src/pobax_playground/tools/: audio_help.py
src/pobax_playground/torso/: hello.py  idle.py  torso.py
src/pobax_playground/voice/: arm_diva_env.py  arm_env.py  voice.py
src/pobax_playground/voice/diva/: __init__.py  diva.py  readme.txt
srv/: BaxterAnalyseVocalTrajectory.srv  BaxterResult.srv  ExecuteAnalyseVocalTrajectory.srv  ExecuteTorsoTrajectory.srv  ExecuteVocalTrajectory.srv  GetSensorialState.srv  Perceive.srv  Produce.srv  Record.srv  Reset.srv
tests/: test_diva.ipynb
