<?xml version="1.0"?>
<package format="2">
  <name>pobax_playground</name>
  <version>0.0.0</version>
  <description>Baxter-Poppy experiments</description>

  <maintainer email="yoan.mollard@inria.fr">Yoan Mollard</maintainer>
  <maintainer email="sebastien.forestier@inria.fr">Sébastien Forestier</maintainer>

  <license>GPL3</license>


  <build_depend>poppy_msgs</build_depend>
  <exec_depend>poppy_msgs</exec_depend>
  <build_depend>poppy_torso_controllers</build_depend>
  <exec_depend>poppy_torso_controllers</exec_depend>
  <build_depend>optitrack_publisher</build_depend>  <!-- From https://github.com/baxter-flowers/optitrack_publisher -->
  <exec_depend>optitrack_publisher</exec_depend>
  <build_depend>baxter_commander</build_depend> <!-- From https://github.com/baxter-flowers/baxter_commander -->
  <exec_depend>baxter_commander</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
